# video

./: .dockerignore  .gitignore  Dockerfile  api.py  app.py  changelog.yaml  database.md  db_test.py  docker-compose.yaml  elastic_test.py  local.db  local_mgmt.py  main.py  metadata.csv  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  sql_db.py  todo.md  tsconfig.json  video_details.csv  videos.db  web.py  web_categories.py  web_dynamic.py
Backup/: videos-020725.db  videos-030725.db  videos-050725.db  videos-070725.db  videos-120725.db  videos-160725.db  videos-180725.db  videos-190725.db  videos-270725.db  videos-290725.db  videos-July25.db  videos-June25.db
CSVs/: 2014 convention.csv  2015 convention.csv  2016 convention.csv  2017 convention.csv  2018 convention.csv  2019 convention.csv  2020 convention.csv  2021 convention .csv  2022 convention.csv  2023 convention.csv  2024 convention.csv  2025 convention.csv  Apply Bible Principles.csv  Apply Yourself to Reading and Teaching.csv  Become Jehovah's Friend - Songs.csv  Bible Accounts.csv  Bible Teachings.csv  Bible Translations.csv  Blessings of Sacred Service.csv  Bloodless Medicine.csv  Books of the Bible.csv  Creation.csv  Dramas - Bible Times.csv  Dramas - Extra Features.csv  Enduring Trials.csv  Expanding our Ministry.csv  For a Happy Marriage.csv  History.csv  Legal Developments.csv  Making Music.csv  Organized to Accomplish Our Ministry.csv  Original Songs.csv  Our History in Motion.csv  Preaching Methods.csv  Reports from around the world.csv  Teens - Goals.csv  annual meeting.csv  (+17 more)
(+2896 files in other folders)
