[project]
name = "1320"
version = "1.1.0"
description = "Video streaming for videos on jw.org"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.1.2",
    "pandas==2.3.2", 
    "requests==2.32.5",
    "PyYAML==6.0.2",
    "antiorm==1.2.1",
    "db==0.1.1",
    "db-sqlite3==0.0.1",
    "Cerberus==1.3.7"
]

# Optional dependencies for development
[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "selenium==4.34.2", 
    "tqdm==4.67.1",
    "beautifulsoup4==4.13.4"
]

[tool.flake8]
max-line-length = 88
exclude = ["__pycache__", "static", "templates"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
